--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,8 @@
 
       <ng-template #authenticated>
         <li class="nav-item"><a href="javascript:void(0);" routerLink="/dashboard" class="nav-link" style="color:rgb(255, 255, 255)" >Dashboard</a></li>
+        <li class="nav-item"><a href="javascript:void(0);" routerLink="/veterinarian" class="nav-link" style="color:rgb(255, 255, 255)" >veterinarian</a></li>
+
         <li><a class="nav-link" href="javascript:void(0);"  (click)="logout()" >Logout</a></li>
       </ng-template>
 
