--- a/src/app/petowner/petowner.component.html
+++ b/src/app/petowner/petowner.component.html
@@ -1,7 +1,15 @@
-<main role="main" class="container mt-5">
+
+<main role="main" class="container">
     <div class="container">
-        <div class="text-center mt-5">
-            <h1 class="mb-5">Pet Owners</h1>
+        <div class="text-center">
+          <h2 class="mb-3">Pet Owners</h2>
+
+          <div class="float-right">
+            <button class="btn btn-primary" (click)="open(content)">Add Pet Owner</button>
+            <div>&nbsp;</div>
+            </div>
+
+
 <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-striped table-bordered" cellspacing="0"
 width="100%">
 <thead>
@@ -9,7 +17,7 @@ width="100%">
     <th>First Name</th>
     <th>Last Name</th>
     <th>Email</th>
-    <th>Email</th>
+    <th>Action</th>
   </tr>
 </thead>
 <tbody>
@@ -17,23 +25,64 @@ width="100%">
     <td>{{petowner.firstName}}</td>
     <td>{{petowner.lastName}}</td>
     <td>{{petowner.email}}</td>
-
     <td>
       <div class="btn-group">
-        <button type="button" class="btn btn-block btn-info">Action</button>
-        <button type="button" class="btn btn-primary btn-outline-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-        <span class="sr-only">Toggle Dropdown</span>
-      </button>
-        <div class="dropdown-menu">
-          <!-- <a class="dropdown-item" (click)="update(office._id)">Mettre à jour</a>
-          <a class="dropdown-item" (click)="delete(office._id)">Supprimer</a> -->
-        </div>
-      </div>
+        <button class="btn btn-primary" (click)="editModal(content, petowner)">Edit</button>
+        &nbsp;
+        <button class="btn btn-danger" (click)="deletePetOwner( petowner.id)">
+          Delete
+       </button>
+            </div>
     </td>
   </tr>
 </tbody>
 </table>
 </div>
 </div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add Pet Owner</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <span class="text-danger" *ngIf="this.errorMessage" >
+      <p [innerText]="this.errorMessage"></p>
+      </span>
+    <form>
+      <div class="mb-3">
+        <label for="firstName">First Name</label>
+        <div class="input-group">
+          <input id="firstName" class="form-control" placeholder="First Name" name="firstName" #firstName="ngModel"  [(ngModel)]="petowner.firstName" >
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="lastName">Last Name</label>
+        <div class="input-group">
+          <input id="lastName" class="form-control" placeholder="Last Name" name="lastName" #firstName="ngModel"  [(ngModel)]="petowner.lastName" >
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="email">Email</label>
+        <div class="input-group">
+          <input id="email" class="form-control" placeholder="Email" name="email" #email="ngModel"  [(ngModel)]="petowner.email" >
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="password">Password</label>
+        <div class="input-group">
+          <input id="password" class="form-control" placeholder="Password" type="password" name="password" #password="ngModel"  [(ngModel)]="petowner.password" >
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="phone">Phone</label>
+        <div class="input-group">
+          <input id="phone" class="form-control" placeholder="Phone" name="phone" #email="ngModel"  [(ngModel)]="petowner.phone" >
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
 </main>
